# OS_in_Rust

./: README.md  commandes.txt
kernel-os/: Cargo.toml  x86_64_kernel-os.json
kernel-os/.cargo/: config.toml
kernel-os/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
kernel-os/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
