[package]
name = "kernel-os"
version = "0.1.0"
edition = "2024"

[dependencies]
x86_64 = "0.14.2"
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
uart_16550 = "0.2.0"


[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",

]
test-success-exit-code = 33
test-timeout = 10

[[test]]
name = "should_panic"
harness = false